# ChangeLog for app-misc/lirc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/lirc/ChangeLog,v 1.228 2012/07/17 20:30:16 axs Exp $

  17 Jul 2012; Ian Stakenvicius <axs@gentoo.org> lirc-0.9.0-r1.ebuild,
  +files/lirc-0.9.0-atiusb_kfifo.patch:
  Applied upstream patch to fix bug 377033

  17 Jul 2012; Ian Stakenvicius <axs@gentoo.org> lirc-0.9.0-r1.ebuild,
  +files/lirc-0.9.0-kernel-2.6.39-fixes.patch:
  fixed compilation issues for some drivers against kernel >=2.6.39 for bug
  369179 , using patch from amielke overlay as the basis

*lirc-0.9.0-r1 (17 Jul 2012)

  17 Jul 2012; Ian Stakenvicius <axs@gentoo.org> +files/lircd-0.8.6-r1,
  +lirc-0.9.0-r1.ebuild, +files/lircd.conf.3:
  converted ebuild to EAPI4, made drivers build separately from tools to fix
  bug 160134, fixed init script so that socket path exists (bug 414307), added
  option so that init script can set 'lirc' as the kernel IR decoding protocol
  on startup (bug 368489)

  09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> lirc-0.8.5.ebuild,
  lirc-0.8.7_pre1.ebuild, lirc-0.8.7.ebuild, lirc-0.9.0.ebuild:
  Fix libusb depend to pull in correct SLOT wrt #378385 by Luis Navarro

  05 Jan 2012; Michael Weber <xmw@gentoo.org> lirc-0.8.7.ebuild:
  ppc stable (bug 343659)

  13 Jun 2011; Christian Faulhammer <fauli@gentoo.org> lirc-0.9.0.ebuild:
  mceusb driver has been merged into the kernel, note that

*lirc-0.9.0 (02 Jun 2011)

  02 Jun 2011; Christian Faulhammer <fauli@gentoo.org> +lirc-0.9.0.ebuild:
  version bump for bug 368721

  05 Nov 2010; Markos Chandras <hwoarang@gentoo.org> lirc-0.8.7.ebuild:
  Stable on amd64 wrt bug #343659

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org> lirc-0.8.7.ebuild:
  stable x86, bug 343659

*lirc-0.8.7 (01 Nov 2010)

  01 Nov 2010; Christian Faulhammer <fauli@gentoo.org> +lirc-0.8.7.ebuild:
  version bump for bug 332277
