@@ -11,9 +11,9 @@ AUX lirc-0.9.0-atiusb_kfifo.patch 437 SHA256 b7950ee185588a3626b8024cb22c0e67c85
 AUX lirc-0.9.0-kernel-2.6.39-fixes.patch 2175 SHA256 f5f48c867716288835a73b8d29aa9b1fcc4905a723e1f99e35fe396b2c759957 SHA512 a502b815cec565a49382e9ad0e7237a9bc7da431f41e94db42d214655577212606500ea2651a298db8cd3a68ce706461e6a773b0d9e3316ac7d49b2038fda354 WHIRLPOOL f1968f51cc29ce4f630c59c964d106e024f4cb3e5938ea80b271800a65d130a42531db5fe6e220ae20577cd4f1998de09e5dbdf52ff1cf6f3839922dd9ece114
 AUX lircd-0.8.3 581 SHA256 9ba3c5a8c0ca5966729dc5e2c7a5960bbf12b443d91e9e319a0277f153df1b1f SHA512 d0f652df31fa1583232e3b29b5fc95d21fc76564df9f5e54881ee849c7a6fa0d697f15335c2e3f1b8ab0b29b7cddef605bd15073f394c29df9e5704854b0017a WHIRLPOOL 69c23cc6584ec435ce50689df223b27244a8deda351dbf048646f05021eba6893c22be24e167930cbb786f15e79cbfa97cf335de8b311ff9543c0e50a853a503
 AUX lircd-0.8.6 973 SHA256 473cf04b2f6addf7c86d23103b1eff68bf3758fda2bf25401ff0631c568c7805 SHA512 9992b629073d9d9c05388b6063d1a7eff6a47514ccc1af2739638c8375b284cd6252c1a825d172d160acee9983f7bd59fdde6dd282c62597e8d6d7a149f06f69 WHIRLPOOL ccb99a3df8e52f3b6abeddebd727aa734c547fafb3db19b4fd266fc7f69d0b0674f937a21bb11d8d338d59c019d870797715993eb781de1f15f4bef1cfe9927d
-AUX lircd-0.8.6-r1 1305 SHA256 7ddfef39128a8f685046f189cad827430a69b41650e6c451b0b25a9bc87d5654 SHA512 b462413b2d3960f89e7838e37e81284201d2e0e8e3a9c49d4264702004a2bc1580e1230755d7b6406043ef08cbbe2b0414fc1e5d20281ce48365d62f31346313 WHIRLPOOL 50e8abc72f86c5d6d84c8db47c5fb1504ba13f0119e4d714339b3574ca0dfc47d13df81083fcccd9a93c0295c0cce505f00c397d12c7f244aabc9c6efead6568
+AUX lircd-0.8.6-r2 1317 SHA256 40d1b609e54327d40e0f4314e31ea58aa029bf95f9f27f311da1260fef2fa416 SHA512 c896b229c6b025d4f2cc3684c0905b83e8e6663f11f35fc705636445846f069cbe6ea1b03bd2e7dab136b0d4895ad35b2b940d713caee3204a97bc8c8080c2f3 WHIRLPOOL dda8fdee434778dcefb90778485845e1c7f724e292d6d11c26c5ac951b232b1bc87b75faa236c48bc3ffd4abb68b74bacbb5564173215c8d944906c542eaa232
 AUX lircd.conf.2 317 SHA256 694d96ffc0c5b8d258592d89c0221aa9b10d69ce024a69a0cc935d899e0b855e SHA512 59779104301e96b377999aad9980f2a915ee9d817e0ba33c172602ea868b49450cd198fe26cf6da4dd8690684768f4d5cd6132a66fec5fea486fbd7a5a8c3a7b WHIRLPOOL 353f5e9e17a831bc124124316f043063ee9c4a13f29f44cf66d236cfcd7d30e756392f18ad761343c723e0e4079541638d1ea7b921074e75a8449f0a5388d179
-AUX lircd.conf.3 502 SHA256 efb63b6e6af77dddd6a8ad757fad78642a43c6e399f40cef0fcc23609f5d2a0e SHA512 e21c76f0ccc689e06da4c60a38302a8cc12aac8da002be9df8f057c30f383a615a1ea1062745ec6121a5e9c9090f64563f585cc1c9e0e7dcaae5ac48fa466c4b WHIRLPOOL 191d3024b1e9dfd22215dfc6ba7fef74638202fdc2240140d3687d43011ab3fec35ef667fd4e1bc33896a4def67ce26e28fd893c4dd011ccc8bf0ccec07c1075
+AUX lircd.conf.4 699 SHA256 d36ff77fa193a065d25e373723e03f1a9471205151b82c73a6574cce4f095962 SHA512 1fb1778f4cc72fc9c11b13a704b3abe80bcce5b3770b69b6b6bea8571e5293adad8c6968779b812e611b67734462c9a577cc71c6b16da3a5bfe31b8007300a62 WHIRLPOOL c9d3b5845b4d395abed932f4553808c0eff66f2be2b6d6ab302c98b11eb2ffc0fcd752e2862982896a4c935425ae03a545cdeb4a6c0da91141d1622178263053
 AUX lircmd 466 SHA256 d47f22a33a83c14a4a0c333d6a445c40e550c491899fb0c6d323e23fe1eac7b7 SHA512 d3cf896f1a2229a51670d5c658c04d5c0aa078a3f8ea15211d655f8883366f9d4102e93941a75957ab3095faa5f598fb1242bfd03f534bb8af134f542d077c6e WHIRLPOOL 39880900b60f44277f41db990841620deefae03f2698122949038187a36631a14e90dba07323e5bf9b6e14cf05f28fe5a3b944ee802e56286ccbf58194ab3d35
 AUX modprobed.lirc 549 SHA256 b4951252321ea326d3ec401e5ff1112716c5aaf5b2ca94d9f5e187e22ad35c44 SHA512 a64cac97e21ab53c247d8dd3e518b3caee5eeb9c3558727eba8a04684894c6be1695ce681e71d559474f4e78bbb39130d97f843eae18e56b3d3eb70f1fbefc63 WHIRLPOOL a45ec8b3cd725f9b4c6b991cf6d4fec7869a07911a2ac82535dca665a0dd99a66b40d85faf0beea780001e9260a8a17c1ccec880c05a271a138c1e0501f7727c
 AUX modulesd.lirc 482 SHA256 3906b61951e1245cb3c9b16e81255a735f7bcdbbfcbedcdf44cd53236e2a3f28 SHA512 07ae7c7288878f65857962bb3a343b83d58eca6447299253dd297dec6443b95d89f46ebcbe1f1ac66ec5062f8134a2e19ecc3ce397b2f8d0d27f203a2a103fcc WHIRLPOOL 2bc4c45d3fd314cc88d50f79974b2aafa4e55a7df7383cbd2f3ddf5b66e144b5700f8d411f79ea458caec0da3e47d5e0db2c34e1efcc2d748c473fe2c5ae7389
@@ -24,14 +24,14 @@ DIST lirc-0.9.0.tar.bz2 857286 SHA256 6323afae6ad498d4369675f77ec3dbb680fe661bea
 EBUILD lirc-0.8.5.ebuild 9419 SHA256 bd6ac677e6e820e414a5febb48fd7a15d93b461aef91f1badb6152c1b7916097 SHA512 a258461e028b8edac05de5acbf8c01b6aa727776232e321b79dabf1cb35911e2977c2e86199ff73f347cde703062118b1f4019e8e51134f1c66f921f3b1374ee WHIRLPOOL 1bf220960c9a48995f618571a9514040369589876e1d1cc3787da9f2f90443b5fa8adc9e87856bc2e611f43eea6b5f44094f2180f7683e98b918a2bed6a4ea64
 EBUILD lirc-0.8.7.ebuild 10100 SHA256 4a68073a5039a14358a63b65ef2b8981a178b9369d9bc9548420f8d97153bc8f SHA512 15508d9bdd99e94c5bf5520ceb8a57ca6bdc05ed8cdc3b79307acbb00a03553a21c625a502d242a05da6c9137abe9dd809ac27c905129351ca752c466d2b0bb3 WHIRLPOOL 404b9f37112328044bd4a578052cbf0352fb13e44e4c855260670f978a0d916fa03aa6f4c3a72f18a7569cc767e4ec470b88e030b18e934afe10a894230d8969
 EBUILD lirc-0.8.7_pre1.ebuild 10108 SHA256 a7f35ebeece34ba3199ab308e209299c8adfbf07e3cd325bb82b4def8d6f97c4 SHA512 c8a857549606e547bce798b61e5efe3f24c4b9447b6e8cd107dfba81c78254f99fd19af6e15a0280c959930d3355cc07e781fe379fbef45aa6ef5b5b08122c41 WHIRLPOOL 56155cd2042135599f6085f064b7000c559eca0057a8a5d2dbc517a9ea74d1bba6a6e533cd3887676d883f45c763a67da602b87b18065733d58044aa30ebef32
-EBUILD lirc-0.9.0-r1.ebuild 12633 SHA256 fa0e43271cea8835b1c072267c6a46b505e6f5b55c95ab3da644cb8153677ffd SHA512 ae8898dcdf2ee4224e9deb85896a6d50534ab8ad5cdf2edaf8931dd8caa5ee66c22f42882ed9dc3fd44f8b56e49d366d0f32713be694e501ea9ea36d495f32c9 WHIRLPOOL 9d113290dc06ca250dcee4aca4c6cb0d6379d6258e5482029d84b4040d3403ece918d8420c3b3ff069449cc9b8a2e3a85fe042f89cf724d956e5a3d81ec7200e
+EBUILD lirc-0.9.0-r2.ebuild 12633 SHA256 af8536e4f5f52ce30c2453860f32c839def26332bed905be2a4662df7943926a SHA512 cb753bf5abc6d64e6905f3462745e3055d516f703c6c5a4f1b7e808d5b757d003871682bbfb3f6ccc498f3d408a1853b9d487c168c65cdc895b6b584df3e20b9 WHIRLPOOL 087b7fb2bb395a7108e68cfbf31d59cddf5ecd73f84a57b8f29414e0b311799d356748a91c9593cc5e82a1c7dd2b239158247312b985f232c94788f52eabb8ca
 EBUILD lirc-0.9.0.ebuild 10161 SHA256 570944822013fd494d91a915e763d74c27870d2488d09b2ace54f4cd4603e0d4 SHA512 ef91477c7840ee3848f6a3da063ba73f62f0017b17a290ca33354e8c7960ca167c5a45edf6a5b3c5d993b09bc14da7884dbe79279d653bcca7a0f923d1f54e7f WHIRLPOOL c03ea9947a658e24ef263de4c40c4b19f014326636d3ffae83eefc04361926d992250587f90f440015b2fb244a79437c8f19967a8fa6f70adf3d364eceafda4d
-MISC ChangeLog 37884 SHA256 eb7f073e7da2f6870f89500c3e56449ea4f3257d934a56410776176bee383601 SHA512 5e2699909507e76b9df93a7af02ce3ef926dc51d595acf0abad45339951c116c51673bea2b9c14117f3dde3e186c637abb1c8ffea7590a0de1e74db85fba31e4 WHIRLPOOL a83fd734033a693f2bdc23fbf982b3bec8181ed67f10fb98455590790e2b273aab994738204d562aab143086bcd9b69af794f7dfedacd2ffb151015022c8069b
+MISC ChangeLog 38187 SHA256 cbd59b18c4b1f9f16ee007ec547ff6ee8a73295c2d016230597bd2c345b8619a SHA512 602b0543ec0e62898d6dbe79a21ff99e29e9de0481da9a011bf614ad07d10395f82d4cf9bee9a8848cf71d3d6fbee061e949b42953f92c37927c4bf398531636 WHIRLPOOL 0b00ca575efcf91f50418d17c0e778ce5fdd7a863b5f7b9c0287de8a68dd2ecfbd809ba9d2c413f8d541d3b1499596cac1191915f94ec08ee0065c01b5fbef56
 MISC metadata.xml 376 SHA256 e3b4637a67a93eb4b9457fa5941e8a6a891adca11a1ebc80c21a59650eac93aa SHA512 17eca2da394c7ca359766b80a0bd743f57235e49f422a7c2b1108e7d2dcdd7ea38ba36d8b3e3bc58b3d3818d75af99c0220eefff9d73aea97b561278cc243ce7 WHIRLPOOL 39c1156d377164114fb8730153a9e5e9dd4753ed98aec00fdff779de354336c3f791dd4fde3a0eff2dff3a8e62279f6e1ab473cf5e6cf00902f3febce0e2ac4f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlAFy2IACgkQ2ugaI38ACPBcZwEAoshjiak7LKYB8GFZ/06eVj9U
-HPbrwNNOJcJtJKMeC6UA/RBPSr0FlL/+QJ1Pzurx0NM53mAOs4pvDCMc4cJ4/JuY
-=LH7F
+iF4EAREIAAYFAlAIZX0ACgkQ2ugaI38ACPCGDgD+OlC0XfDODEPMeNU6BY5p2Y/U
+At5mjnSSa39YjkkhHBoA/2QjwRjwuvAL8Ftg665GLpZuy6z9TWNKsuM1ik4pxL0/
+=k7Bf
 -----END PGP SIGNATURE-----
