@@ -1,11 +1,11 @@
 #!/sbin/runscript
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/lirc/files/Attic/lircd-0.8.6-r1,v 1.1 2012/07/17 19:18:25 axs Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/lirc/files/lircd-0.8.6-r2,v 1.1 2012/07/19 19:52:17 axs Exp $
 
 PIDFILE=/var/run/lirc/${SVCNAME}.pid
-LIRCD_SYMLINKFILE=/dev/lircd
-LIRCD_SOCKET=/var/run/lirc/lircd
+: ${LIRCD_SYMLINKFILE:=/dev/lircd}
+: ${LIRCD_SOCKET:=/var/run/lirc/lircd}
 
 depend() {
 	need localmount
